build: Update dependencies and configuration
This commit updates various project dependencies and configuration files to align with newer versions and best practices. Changes include:

- Renaming the project from "pannenkoeken-calculator" to "pancake-recipe-calculator".
- Updating React and ReactDOM to v19.2.0.
- Upgrading Vite and related plugins.
- Adjusting TypeScript configuration for improved module resolution and compatibility.
- Configuring Vite for a development server with specific host and port settings, and enabling environment variable loading for API keys.
- Updating the project metadata to reflect the new name.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,14 +22,12 @@
         animation: bounce 2s infinite;
       }
     </style>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
-    "vite": "https://aistudiocdn.com/vite@^7.1.12"
+    "react/": "https://aistudiocdn.com/react@^19.2.0/"
   }
 }
 </script>
